# msk304-course-materials

./: README.md
Dev Assistant/: .gitignore  Cargo.toml
Dev Assistant/configs/: build.toml  week-mapping.toml
Dev Assistant/content/week-01/: _meta.toml
Dev Assistant/content/week-01/indonesian/: 01-flagship-astra.md  02-sidebar-unilever.md  03-sidebar-indofood.md  04-sources-and-verify.md
Dev Assistant/content/week-01/study_guide/: 01-reading-order.md  02-central-concepts.md  03-connections.md  04-focus-and-check.md
Dev Assistant/content/week-02/: _meta.toml
Dev Assistant/content/week-03/: _meta.toml
Dev Assistant/content/week-04/: _meta.toml
Dev Assistant/content/week-05/: _meta.toml
Dev Assistant/content/week-06/: _meta.toml
Dev Assistant/content/week-07/: _meta.toml
Dev Assistant/content/week-08/: _meta.toml
Dev Assistant/content/week-09/: _meta.toml
Dev Assistant/content/week-10/: _meta.toml
Dev Assistant/content/week-11/: _meta.toml
Dev Assistant/content/week-12/: _meta.toml
Dev Assistant/content/week-13/: _meta.toml
Dev Assistant/content/week-14/: _meta.toml
Dev Assistant/scripts/: generate_submission.py  reference.docx
Dev Assistant/src/: error.rs  lib.rs  main.rs
Dev Assistant/src/content_loader/: frontmatter.rs  markdown.rs  mod.rs
Dev Assistant/src/html_builder/: assets.rs  engine.rs  mod.rs
Dev Assistant/src/model/: config.rs  mod.rs
Dev Assistant/templates/: base.html.j2  master-bundle.html.j2
Dev Assistant/tests/: config_load.rs  content_loader.rs  frontmatter.rs  html_builder.rs  markdown.rs
(+268 files in other folders)
